租車系統命名與專案架構整理

--- a/src/main/resources/static/css/vertical-layout-light/style.css
+++ b/src/main/resources/static/css/vertical-layout-light/style.css
@@ -11151,7 +11151,7 @@ pre code {
 
 .table-hover tbody tr:hover {
   color: #212529;
-  background-color: #eaeaf1;
+  background-color: #eee;
 }
 
 .table-primary,
