--- a/src/main/resources/templates/backend/ticketInput.html
+++ b/src/main/resources/templates/backend/ticketInput.html
@@ -39,7 +39,6 @@
 	/* background-color: #F3F3F3; */
 }
   </style>
-  
 </head>
 
 <body>
@@ -55,7 +54,6 @@
 		  <!-- 主要內容 partial -->
 		 <div class="main-panel">
 			<div class="content-wrapper">
-	
 			  <div class="row">
 				<div class="col-12 grid-margin">
 				  <div class="card">
@@ -63,9 +61,8 @@
 					  <h4 class="card-title">新增/修改景點資料</h4>
 					  <form  class="form-sample" id="form" action="/ticketList" th:action="@{/ticketList}" th:object="${ticket}" method="post" enctype="multipart/form-data">
 						<input type="hidden" th:value="*{ticketNo}" name="ticketNo">
-						<!-- <p class="card-description mt-5">
-						  個人資料
-						</p> -->
+						
+						<!-- 景點套票名稱、電話 -->
 						<div class="row mt-4">
 						  <div class="col-md-6">
 							<div class="form-group row">
@@ -84,6 +81,8 @@
 							</div>
 						  </div>
 						</div>
+
+						<!-- 開始營業時間、結束營業時間 -->
 						<div class="row">
 						  <div class="col-md-6">
 							<div class="form-group row">
@@ -102,11 +101,8 @@
 							</div>
 						  </div>
 						</div>
-					
-						<!-- <p class="card-description mt-4">
-						  聯絡地址
-						</p> -->
-
+						
+						<!-- 國家\地區、縣市 -->
 						<div class="row">
 							<div class="col-md-6">
 							  <div class="form-group row">
@@ -123,45 +119,35 @@
 							<div class="form-group row">
 							  <label class="col-sm-3 col-form-label">縣市</label>
 							  <div class="col-sm-9">
-							  <input type="hidden" class="js-demeter-tw-zipcode-selector" data-city="#city" data-dist="#location"  
-										size="6" readonly/> 
-								<select id="city" name="city" placeholder="請選擇縣市"  class="form-control"></select>
+							  <!-- <input type="hidden" data-city="#city" data-dist="#location" size="6" readonly/>  -->
+								<select id="city" name="city" placeholder=" " class="form-control" th:field="*{city}" data-city="#city"></select>
 							  </div>
 							</div>
 						  </div>
 						</div>
+
+						<!-- 地區、地址 -->
 						<div class="row">
 							<div class="col-md-6">
 							  <div class="form-group row">
 								<label class="col-sm-3 col-form-label" for="locationId">地區</label>
 								<div class="col-sm-9">
 								<!-- <input type="hidden" class="js-demeter-tw-zipcode-selector" data-city="#city" data-dist="#location"  size="6" id="yoyo" name="yoyo" readonly/>  -->
-								<select type="text" name="location" id="dist" class="form-control" th:field="*{location}" placeholder="請選擇鄉鎮區"></select>
+								<select id="dist" name="location"  placeholder=" " class="form-control" th:field="*{location}" data-dist="#dist"></select>
 								</div>
 							  </div>
 							</div>
-						  <div class="col-md-6">
+						  	<div class="col-md-6">
 							<div class="form-group row">
 							  <label class="col-sm-3 col-form-label" for="addressId">地址</label>
 							  <div class="col-sm-9">
 								<input id="addressId" name="address"   class="form-control" th:field="*{address}"></select>
 							  </div>
 							</div>
-						  </div>
+						  	</div>
 						</div>
 
-						
-						<!-- <div class="row">
-						  <div class="col-md-12">
-							<div class="form-group row">
-							  <label class="col-sm-1 col-form-label mr-5">地址</label>
-							  <div class="col-sm-10" style="width: 110%;">
-								<input type="text" name="address" id="address" class="form-control" />
-							  </div>
-							</div>
-						  </div>
-						</div> -->
-
+						<!-- 標籤編號、標籤名稱 -->
 						<div class="row mt-4">
 							<div class="col-md-6">
 							  <div class="form-group row">
@@ -185,19 +171,19 @@
 								</div>
 							  </div>
 							</div>
-						  </div>
+						</div>
 
-						<div class="row">
+						<!-- 上、下架時間 -->
+						<!-- <div class="row">
 							<div class="col-md-6">
 							  <div class="form-group row">
 								<label class="col-sm-3 col-form-label" for="startDate">上架時間</label>
 								<div class="col-sm-9">
-								  <input id="ticketStartDate" name="reservatTime" type="text" class="form_datetime" placeholder="請選擇上架日期" required="required" style="width: 10.6rem;border:0px;outline:none;" th:field="*{ticketStartDate}"/>
-								  <!-- <span><img th:src="@{/images/demo/hidePwd.png}" class="col-2" id="eyes"  style="position:absolute ; right:20px ; top:23%"></span> -->
-								</div>
-							  </div>
+								<input id="ticketStartDate" name="reservatTime" type="text" class="form_datetime" placeholder="請選擇上架日期" required="required" style="width: 10.6rem;border:0px;outline:none;" th:field="*{ticketStartDate}"/>
+						</div>
 							</div>
-							<div class="col-md-6">
+							  </div>
+							  <div class="col-md-6">
 							  <div class="form-group row">
 								<label class="col-sm-3 col-form-label" for="endDate">下架時間</label>
 								<div class="col-sm-9">
@@ -206,61 +192,78 @@
 								</div>
 							  </div>
 							</div>
-						  </div>
-						  
-						  <div class="row mt-4">
-							<div class="col-md-6">
-							  <div class="form-group row">
-								<label class="col-sm-3 col-form-label" for="image">上傳照片</label>
-								<div class="col-sm-9">
-								  <input id="image" type="file" class="col-form-label" name="image" />
-								</div>
-							  </div>
-							</div>
-							<!-- <div class="col-sm-9">
-								<div class="custom-file">
-									<input type="file" class="form-control custom-file-input pb-1"	name="imagefiles" id="imagefiles" multiple>
-									<div class="invalid-feedback">最多選取3張圖片</div>
-									<label class="custom-file-label">選擇檔案</label>
-								</div>
-							</div> -->
-							<div class="col-md-6">
-							  <div class="form-group row">
-								<label class="col-sm-3 col-form-label" for="priceId">價格</label>
-								<div class="col-sm-9">
-								  <input id="priceId" type="text" class="form-control" name="price" th:field="*{price}"/>
-								</div>
-							  </div>
-							</div>
-						  </div>
-						  <div class="row mt-3">
-						  <div class="col-md-4">
+						</div> -->
+
+						<!-- 價格、狀態 -->
+						<div class="row mt-4">
+						  <div class="col-md-6">
 							<div class="form-group row">
-							  <label class="col-sm-3 col-form-label" for="descriptionId">景點套票簡介</label>
+							  <label class="col-sm-3 col-form-label" for="priceId">價格</label>
 							  <div class="col-sm-9">
-								<textarea class="sr" type="text" name="ticketIntro" id="descriptionId" style="white-space: normal" onkeyUp="textLimitCheck(this, 300);" th:field="*{ticketIntro}"></textarea>
-								<div class="col-sm-15" style="width: 110%;">
-									<font color=#666666>限 300 個字，已輸入 <font color="#CC0000"><span id="messageCount">0</span></font> 個字</font>
-								</div>
+								<input id="priceId" type="text" class="form-control" name="price" th:field="*{price}" />
 							  </div>
 							</div>
 						  </div>
-						  <p class="text-left" style="position: relative; left:300px;top: 150px; ">
+						  <div class="col-md-6">
+							<div class="form-group row">
+							  <label class="col-sm-3 col-form-label" for="statusId">狀態</label>
+							  <div class="col-sm-9">
+								<select id="status" type="text" class="form-control" name="status" th:field="*{status}" readonly>
+									<!-- <option value="請選擇">請選擇</option> -->
+									  <option value="已上架">上架中</option>
+									  <!-- <option value="已下架">已下架</option> -->
+								</select>
+							  </div>
+							</div>
+						  </div>
+						</div>
+						<!-- 簡介 -->
+						<div class="col-md-9">
+							<div class="form-group row">
+								<label class="col-sm-3 col-form-label" for="descriptionId">景點套票簡介</label>
+								<div class="col-sm-9">
+									<textarea name="ticketIntro"  th:field="*{ticketIntro}" id="descriptionId"></textarea>
+									<!-- <textarea class="sr" type="text" name="ticketIntro" id="descriptionId" style="white-space: normal" onkeyUp="textLimitCheck(this, 300);" th:field="*{ticketIntro}"></textarea>
+										<div class="col-sm-15" style="width: 110%;">
+										<font color=#666666>限 300 個字，已輸入 <font color="#CC0000"><span id="messageCount">0</span></font> 個字</font> -->
+									<!-- </div> -->
+								</div>
+							</div>
+						</div>
+
+						<!-- 照片 -->
+						<div class="form-group row mt-2 justify-content-end">
+						<div class="col-sm-3">
+							<label for="images" class="col-form-label pb-1">上傳照片</label>
+							<div id="images-length" class="text-black-50 small">(0/3)</div>
+						</div>
+						<div class="col-sm-4.5">
+							<div class="custom-file">
+								<!-- <input id="image" type="file" class="col-form-label" name="image" /> -->
+								<input type="file" class="form-control custom-file-input pb-1"	name="imagefiles" id="imagefiles" multiple>
+								<div class="invalid-feedback">最多選取3張圖片</div>
+								<label class="custom-file-label">選擇檔案</label>
+							</div>
+						</div>
+						</div>
+
+						<!-- 返回、提交、一鍵輸入、一鍵錯誤按鈕 -->
+						<p class="text-left" style="position: relative; left:300px;bottom: 10px;">
 							<button type="button" class="btn btn-primary" onclick="history.go(-1)">返回</button>
 							<button type="submit" class="btn btn-primary">提交</button>
 							<button type="button" class="btn btn-secondary" id="correctInput">一鍵輸入</button>
 							<button type="button" class="btn btn-secondary" id="wrongInput">一鍵錯誤</button>
-						</form>
+						</p>
+					  </form>
 					</div>
+				  </div>
 				</div>
+			  </div>
 			</div>
+			<footer th:replace="backend/partials/fragment :: footer"></footer>
+		 </div>
 		</div>
-		</div>
-		<footer th:replace="backend/partials/fragment :: footer"></footer>
-		</div>
-	
-		</div>
-	  </div>
+	</div>
 	
 
   <script th:src="@{/vendors/js/vendor.bundle.base.js}" src="vendors/js/vendor.bundle.base.js"></script>
@@ -289,7 +292,7 @@
 
 <!-- 城市及地區判斷 -->
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
-<script type='text/javascript' src="https://demeter.5fpro.com/tw/zipcode-selector.js"></script>
+<script type='text/javascript' src="https://demeter.5fpro.com/tw/zipcode-selector.js" data-city="#city" data-dist="#dist" ></script>
 <script type='text/javascript' class="js-demeter-tw-zipcode-selector" data-city="#city" data-dist="#dist" />
 </script>
 <script type="text/javascript"></script>
@@ -303,20 +306,27 @@
 <!-- <script type="text/javascript" src="assets/js/mdtimepicker.js"></script> -->
 <script th:src="@{/js/ticketTableJS/mdtimepicker.js}" src="../../static/js/ticketTableJS/mdtimepicker.js"></script>
 
+<!-- ckeditor -->
+<script src="//cdn.ckeditor.com/4.19.0/standard/ckeditor.js"></script>
+
 <!-- 判斷城市資料後再自動代入地區 -->
-<script>
+<script th:inline="javascript">
 	window.addEventListener('load', function () {
 		console.log("load complete");
 		setTimeout(function () {
 			console.log("I am the third log after 2 seconds");
-			console.log(document.getElementById("city").value = "<th:value='{ticket.city}'/>");
-			document.getElementById("city").value = "<c:out value='${ticket.city}'/>";
+			
+			var city = /*[[${ticket.city}]]*/ 'default';
+		//console.log(document.getElementById("city").value = "<th:value='{ticket.city}'/>");
+			console.log(city); 
+			document.getElementById("city").value = city;
 			// document.getElementById("city").value = "<th:value='*{city}'/>";
 			document.getElementById("city").dispatchEvent(new Event('change'));
 			setTimeout(function () {
+				var location = /*[[${ticket.location}]]*/ 'default';
 				// document.getElementById("dist").value = "<th:value='*{location}'/>";
-				document.getElementById("dist").value = "<c:out value='${ticket.location}'/>";
-			}, 1000);
+				document.getElementById("dist").value = location;
+			}, 500);
 		}, 1000);
 
 		document.getElementById("sel").dispatchEvent(new Event('change'));
@@ -466,7 +476,7 @@ $("#sel").change(function () {
 	function textLimitCheck(thisArea, maxLength) {
 		if (thisArea.value.length > maxLength) {
 			alert(maxLength + ' 個字限制。 \r超出部分將自動去除。');
-			thisArea.value = thisArea.value.substring(0, 500);
+			thisArea.value = thisArea.value.substring(0, 200);
 			thisArea.focus();
 		}    /*回寫span的值，當前填寫文字的數量*/
 		messageCount.innerText = thisArea.value.length;
@@ -516,16 +526,17 @@ $('#correctInput').click(function () {
     $('#dist').val('阿里山鄉')
     $('#addressId').val('59號')
  	$('#priceId').val('215')
+ 	$('#statusId').val('已上架')
     $('#sel').val('4')
     $('#sel2').val('歷史景點')
-    $('#ticketStartDate').val('2022-07-29')
-    $('#ticketEndDate').val('2022-12-31')
+    // $('#ticketStartDate').val('2022-07-29')
+    // $('#ticketEndDate').val('2022-12-31')
     // $('#note').val('')
 	
 })
 </script>
 
-<!-- 一鍵輸入 -->
+<!-- 一鍵錯誤 -->
 <script>
 $('#wrongInput').click(function () {
 	$('#nameId').val('阿里山國家森林遊樂區門票')
@@ -540,10 +551,13 @@ $('#wrongInput').click(function () {
  	$('#priceId').val('215')
     $('#sel').val('4')
     $('#sel2').val('歷史景點')
-    $('#ticketStartDate').val('2022-07-29')
-    $('#ticketEndDate').val('2022-12-31')
+    // $('#ticketStartDate').val('2022-07-29')
+    // $('#ticketEndDate').val('2022-12-31')
 })
 </script>
+
+<script>CKEDITOR.replace('ticketIntro');</script>
+
 </body>
 
 </html>
