--- a/src/main/resources/templates/frontend/car/car-location-form.html
+++ b/src/main/resources/templates/frontend/car/car-location-form.html
@@ -51,7 +51,7 @@
 				<div class="col-md-9 grid-margin my-5 pl-5">
 					<div class="card">
 						<div class="card-body ">
-							<h4 class="card-title font-weight-bold">新增租車據點</h4>
+							<h4 class="card-title font-weight-bold">租車據點</h4>
 							<form id="insertForm" name="form" th:action="@{/cars/locations}" method="post" th:object="${carLocation}"
 								  class="form-horizontal needs-validation" enctype="multipart/form-data">
 								  
@@ -123,175 +123,6 @@
 									</div>
 								</div>
 								
-								<p class="card-description mt-5">車款上架</p>
-
-<!-- 								<div class="row form-group my-4"> -->
-<!-- 									<div class="col-lg-1"></div> -->
-<!-- 									<label class="col-lg-2 col-form-label" for="engine">選擇車款</label> -->
-<!-- 									<div class="col-lg-6"> -->
-<!-- 										<select id="carModel" name="carModel" class="form-control"> -->
-<!-- 											<option value="">常用車款</option> -->
-<!-- 											<option th:each="existModel : ${existModels}" th:value="${existModel.id}" th:text="${existModel.makeEn}+' '+${existModel.model}"></option> -->
-<!-- 										</select> -->
-<!-- 										<div class="invalid-feedback">請選擇車款</div> -->
-<!-- 									</div> -->
-<!-- 									<a href="">找不到車款?</a> -->
-<!-- 								</div> -->
-								
-								
-								
-<!-- 								<table> -->
-<!-- 								  <thead> -->
-<!-- 								    <tr> -->
-<!-- 								      <th>Row</th> -->
-<!-- 								      <th>Variety</th> -->
-<!-- 								      <th>Seeds per cell</th> -->
-<!-- 								      <th> -->
-<!-- 								        <button type="submit" name="addRow" th:text="#{carLocation.carOption.add}">Add row</button> -->
-<!-- 								      </th> -->
-<!-- 								    </tr> -->
-<!-- 								  </thead> -->
-<!-- 								  <tbody> -->
-<!-- 								    <tr th:each="option, optionStat : *{carOptions}"> -->
-<!-- 								      <td> -->
-<!-- 								      <input type="text" th:field="*{carOptions[__${optionStat.index}__].carModel}" /> -->
-<!-- 								      <input type="text" th:field="*{carOptions[__${optionStat.index}__].carLocation}" /> -->
-<!-- 										</td> -->
-<!-- 								      <td> -->
-<!-- 								      	<input type="text" th:field="*{carOptions[__${optionStat.index}__].price}" /> -->
-								      
-<!-- 								        <select th:field="*{rows[__${rowStat.index}__].variety}"> -->
-<!-- 								          <option th:each="var : ${allVarieties}"  -->
-<!-- 								                  th:value="${var.id}"  -->
-<!-- 								                  th:text="${var.name}">Thymus Thymi</option> -->
-<!-- 								        </select> -->
-<!-- 								      </td> -->
-<!-- 								      <td> -->
-<!-- 								        <input type="text" th:field="*{carOptions[__${optionStat.index}__].price}" /> -->
-<!-- 								        <input type="text" th:field="*{carOptions[__${optionStat.index}__].discount}" /> -->
-<!-- <!-- 								        <input type="text" th:field="*{option.price}" /> -->
-<!-- 								      </td> -->
-<!-- 								      <td> -->
-<!-- 								        <button type="submit" name="removeRow">Remove row</button> -->
-<!-- 								      </td> -->
-<!-- 								    </tr> -->
-<!-- 								  </tbody> -->
-<!-- 								</table> -->
-								
-								
-								
-								
-<!-- 								<div id="test" th:text="${carOptions}"></div> -->
-<!-- 								<div th:each="option : *{carOptions}" > -->
-<!-- 									<div id="test2" th:text="${option.price}"></div> -->
-<!-- 									<div class="col-lg-1"></div> -->
-<!-- 									<div class="row mt-4"> -->
-<!-- 									<p th:text="${option.id}"></p> -->
-<!-- 										<input th:text="${option.id}" id="id" type="hidden" class="form-control" placeholder="" /> -->
-<!-- 										<div class="col-md-5"> -->
-<!-- 											<div class="form-group row"> -->
-<!-- 												<label class="col-md-4 col-form-label" for="makeCh">廠牌（中文）</label> -->
-<!-- 												<div class="col-md-8"> -->
-<!-- 													<input th:field="*{option.carModel.makeCh}" id="makeCh" type="text" class="form-control" /> -->
-<!-- 													<div class="invalid-feedback">請輸入車款廠牌</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 										</div> -->
-<!-- 										<div class="col-md-5"> -->
-<!-- 											<div class="form-group row"> -->
-<!-- 												<label class="col-md-4 col-form-label" for="type">車款類別</label> -->
-<!-- 												<div class="col-md-8"> -->
-<!-- 													<select th:field="*{option.carModel.type}" id="type" name="type" class="form-control "> -->
-<!-- 														<option value="經濟轎車">經濟轎車</option> -->
-<!-- 														<option value="豪華轎車">豪華轎車</option> -->
-<!-- 														<option value="休旅車">休旅車/SUV</option> -->
-<!-- 													</select> -->
-<!-- 													<div class="invalid-feedback">請選擇車款類別</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 										</div> -->
-<!-- 									</div> -->
-<!-- 									<div class="row"> -->
-<!-- 											<div class="col-md-5"> -->
-<!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="makeEn">廠牌（英文）</label> -->
-<!-- 													<div class="col-sm-9"> -->
-<!-- 														<input th:field="*{option.carModel.makeEn}" id="makeEn" type="text" class="form-control" /> -->
-<!-- 														<div class="invalid-feedback">請輸入車款廠牌</div> -->
-<!-- 													</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 											<div class="col-md-6"> -->
-<!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="model">車款</label> -->
-<!-- 													<div class="col-sm-9"> -->
-<!-- 														<input th:field="*{option.carModel.model}" id="model" type="text" class="form-control" /> -->
-<!-- 														<div class="invalid-feedback">請輸入車款</div> -->
-<!-- 													</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 										</div> -->
-<!-- 										<div class="row"> -->
-<!-- 											<div class="col-md-6"> -->
-<!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="power">動力</label> -->
-<!-- 													<div class="col-sm-4"> -->
-<!-- 														<div class="form-check"> -->
-<!-- 															<label class="form-check-label">  -->
-<!-- 															<input th:field="*{option.carModel.power}" class="form-check-input" type="radio"  -->
-<!-- 																id="automatic" name="power" value="燃油車" checked /> 燃油車 -->
-<!-- 															</label> -->
-<!-- 														</div> -->
-<!-- 													</div> -->
-<!-- 													<div class="col-sm-5"> -->
-<!-- 														<div class="form-check"> -->
-<!-- 															<label class="form-check-label">  -->
-<!-- 															<input th:field="*{option.carModel.power}" class="form-check-input" type="radio"  -->
-<!-- 																id="manual" name="power" value="電動車" /> 電動車 -->
-<!-- 															</label> -->
-<!-- 														</div> -->
-<!-- 													</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 											<div class="col-md-6"> -->
-<!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="transmission">變速器</label> -->
-<!-- 													<div class="col-sm-4"> -->
-<!-- 														<div class="form-check"> -->
-<!-- 															<label class="form-check-label">  -->
-<!-- 															<input th:field="*{option.carModel.transmission}" class="form-check-input" type="radio"  -->
-<!-- 																id="automatic" name="transmission" value="AT" /> 自排 -->
-<!-- 															</label> -->
-<!-- 														</div> -->
-<!-- 													</div> -->
-<!-- 													<div class="col-sm-5"> -->
-<!-- 														<div class="form-check"> -->
-<!-- 															<label class="form-check-label">  -->
-<!-- 															<input th:field="*{option.carModel.transmission}" class="form-check-input" type="radio"  -->
-<!-- 																	id="manual" name="transmission" value="MT" /> 手排 -->
-<!-- 															</label> -->
-<!-- 														</div> -->
-<!-- 													</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 										</div> -->
-<!-- 										<div class="row"> -->
-<!-- 											<div class="col-md-6"> -->
-<!-- 												<div class="form-group row"> -->
-<!-- 													<label class="col-sm-3 col-form-label" for="engine">引擎排氣量</label> -->
-<!-- 													<div class="col-sm-9"> -->
-<!-- 														<input th:field="*{option.carModel.engine}" id="engine" type="number" class="form-control" min="1" /> -->
-<!-- 														<div class="invalid-feedback">請輸入引擎排氣量</div> -->
-<!-- 													</div> -->
-<!-- 												</div> -->
-<!-- 											</div> -->
-<!-- 										</div> -->
-<!-- 								</div> -->
-								
-<!-- 								<div class="row"> -->
-<!-- 									<div class="col-lg-3"></div> -->
-<!-- 									<div class="col-lg-9" id="carModelInfo"></div> -->
-<!-- 								</div> -->
 								<div class="d-flex justify-content-end">
 									<button id="btn-insert" type="submit" class="btn btn-warning mr-2 justify-content-end mr-4">
 										儲存資料
