--- a/src/main/resources/templates/frontend/shopingcart.html
+++ b/src/main/resources/templates/frontend/shopingcart.html
@@ -3,44 +3,36 @@
 
 <head th:replace="frontend/partials/fragment :: head">
 
-	<title>購物車</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
-<style>
-	
-	.moneymargin{
-		margin-top: 10px;
-	}
-	
+<title>購物車</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	.test{
-		font-family: NotoSansTC-Regular;
-	
-	}
+<style>
+.moneymargin {
+	margin-top: 10px;
+}
+
+.test {
+	font-family: NotoSansTC-Regular;
+}
 </style>
 </head>
 <body class="animsition">
-	
+
 	<!-- Header上方導覽列 -->
 	<header th:replace="frontend/partials/fragment :: header"></header>
 	<!-- Cart 購物車 -->
 	<div th:replace="frontend/partials/fragment :: cart"></div>
-	
+
 	<!-- breadcrumb -->
 	<div class="container">
 		<div class="bread-crumb flex-w p-l-25 p-r-15 p-t-30 p-lr-0-lg">
-			<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04">
-				首頁
-				<i class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
-			</a>
-
-			<span class="stext-109 cl4">
-				購物車
-			</span>
+			<a href="index.html" class="stext-109 cl8 hov-cl1 trans-04"> 首頁 <i
+				class="fa fa-angle-right m-l-9 m-r-10" aria-hidden="true"></i>
+			</a> <span class="stext-109 cl4"> 購物車 </span>
 		</div>
 	</div>
-		
+
 
 	<!-- Shoping Cart -->
 	<form class="bg0 p-t-75 p-b-85">
@@ -50,201 +42,148 @@
 				<div class="col-lg-10 col-xl-7 m-lr-auto m-b-50 ">
 					<div class="m-l-25 m-r--38 m-lr-0-xl">
 						<div class="wrap-table-shopping-cart">
-							<table class="table-shopping-cart ">
+							<table class="table-shopping-cart">
+								<thead>
 								<tr class="table_head">
 									<th class="column-1">品項</th>
-									<th class="column-2"></th>
+									<!-- 									<th class="column-2"></th> -->
 									<th class="column-3">單價</th>
 									<th class="column-4">數量</th>
 									<th class="column-5">總價</th>
+									<th class="column-6"></th>
 								</tr>
-
-								<tr class="table_row">
-									<td class="column-1">
-										<div class="how-itemcart1">
-											<img src="images/tickets/art.jpg" alt="IMG">
-										</div>
-									</td>
-									<td class="column-2">橫山書法藝術館</td>
-									<td class="column-3">$ 350</td>
+								</thead>
+								<tbody>
+								<tr class="table_row" 
+									th:each="Entry : ${ShoppingCart.getContent()}">
+									<td class="column-1" th:text="${Entry.value.itemInfo}">橫山書法藝術館</td>
+									<!-- 										<td class="column-2"> -->
+									<!-- 										<div class="how-itemcart1"> -->
+									<!-- 											<img src="images/tickets/art.jpg" alt="IMG"> -->
+									<!-- 										</div> -->
+									<!-- 									</td> -->
+									<td class="column-3" th:text="${Entry.value.unitPrice}">$
+										350</td>
 									<td class="column-4">
 										<div class="wrap-num-product flex-w m-l-auto m-r-0">
-											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
+											<div
+												class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
 												<i class="fs-16 zmdi zmdi-minus"></i>
 											</div>
 
-											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="1">
+											<input class="mtext-104 cl3 txt-center num-product"
+												type="number" name="num-product1"
+												th:value="${Entry.value.quantity}">
 
-											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
+											<div
+												class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
 												<i class="fs-16 zmdi zmdi-plus"></i>
 											</div>
 										</div>
 									</td>
-									<td class="column-5">$ 350</td>
+									<td class="column-5" th:text="${Entry.value.quantity} * ${Entry.value.unitPrice}">$
+										350</td>
+									
+									<td class="column-6"><button type="button" class="btn btn-danger btn-delete">刪除</button></td> 	
 								</tr>
-
-								<tr class="table_row">
-									<td class="column-1">
-										<div class="how-itemcart1">
-											<img src="images/tickets/beach_atv.jpg" alt="IMG">
-										</div>
-									</td>
-									<td class="column-2">東澳海灘＆叢林野地ATV</td>
-									<td class="column-3">$ 980</td>
-									<td class="column-4">
-										<div class="wrap-num-product flex-w m-l-auto m-r-0">
-											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-minus"></i>
-											</div>
-
-											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product2" value="1">
-
-											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-plus"></i>
-											</div>
-										</div>
-									</td>
-									<td class="column-5">$ 980</td>
-								</tr>
-
-								<tr class="table_row">
-									<td class="column-1">
-										<div class="how-itemcart1">
-											<img src="images/tickets/car_racing.jpg" alt="IMG">
-										</div>
-									</td>
-									<td class="column-2">國際賽車場卡丁車體驗</td>
-									<td class="column-3">$ 350</td>
-									<td class="column-4">
-										<div class="wrap-num-product flex-w m-l-auto m-r-0">
-											<div class="btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-minus"></i>
-											</div>
-
-											<input class="mtext-104 cl3 txt-center num-product" type="number" name="num-product1" value="1">
-
-											<div class="btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m">
-												<i class="fs-16 zmdi zmdi-plus"></i>
-											</div>
-										</div>
-									</td>
-									<td class="column-5">$ 350</td>
-								</tr>
+								</tbody>
 							</table>
 						</div>
-						
+
 						<div class="flex-w flex-sb-m  p-t-18 p-b-15 p-lr-40 p-lr-15-sm">
-							<!-- <div class="flex-w flex-m m-r-20 m-tb-5">
-								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code">
-									
-								<button class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5 ">
-									Apply coupon
-								</button>
+							<div class="flex-w flex-m m-r-20 m-tb-5">
+								<!-- 								<input class="stext-104 cl2 plh4 size-117 bor13 p-lr-20 m-r-10 m-tb-5" type="text" name="coupon" placeholder="Coupon Code"> -->
+								<select class="form-select" aria-label="Default select example" id="addtocart">
+									<option selected>請選擇商品</option>
+									<option value="1">住宿</option>
+									<option value="2">票券</option>
+									<option value="3">租車</option>
+								</select>
+<!-- 								<button -->
+<!-- 									class="flex-c-m stext-101 cl2 size-118 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-5 "> -->
+<!-- 									Apply coupon</button> -->
 							</div>
 
-							<div class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10">
-								Update Cart
-							</div> -->
+<!-- 							<div -->
+<!-- 								class="flex-c-m stext-101 cl2 size-119 bg8 bor13 hov-btn3 p-lr-15 trans-04 pointer m-tb-10"> -->
+<!-- 								Update Cart</div> -->
+							
 						</div>
 					</div>
 				</div>
 
 				<div class="col-sm-10 col-lg-7 col-xl-5 m-lr-auto m-b-50">
-					<div class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm">
-						<h4 class="mtext-109 cl2 p-b-30">
-							金額及折扣總計
-						</h4>
+					<div
+						class="bor10 p-lr-40 p-t-30 p-b-40 m-l-63 m-r-40 m-lr-0-xl p-lr-15-sm">
+						<h4 class="mtext-109 cl2 p-b-30">金額及折扣總計</h4>
 
 						<div class="bor12 p-b-13">
 							<div class="row">
-								<input class="col-6 stext-104 cl2 plh4 size-219 bor13 p-lr-20 " type="text" name="coupon" placeholder="Coupon Code">
-								<div class="col-6 flex-c-m stext-101 cl2 size-219 bg8 bor13 hov-btn3 pointer ">
-									使用優惠券
-								</div>
+								<input class="col-6 stext-104 cl2 plh4 size-219 bor13 p-lr-20 "
+									type="text" name="coupon" placeholder="Coupon Code">
+								<div
+									class="col-6 flex-c-m stext-101 cl2 size-219 bg8 bor13 hov-btn3 pointer ">
+									使用優惠券</div>
 							</div>
-							
+
 						</div>
-					
+
 						<div class="flex-w flex-t bor12 p-t-15 ">
 							<div class="size-208">
-								<span class="stext-110 cl2">
-									折扣種類:
-								</span>
+								<span class="stext-110 cl2"> 折扣種類: </span>
 							</div>
 
 							<div class="size-209">
-								<span class="mtext-110 cl2">
-									滿千送百
-								</span>
+								<span class="mtext-110 cl2"> 滿千送百 </span>
 							</div>
 							<div class="size-208">
-								<span class="stext-110 cl2">
-									折扣金額:
-								</span>
+								<span class="stext-110 cl2"> 折扣金額: </span>
 							</div>
 
 							<div class="size-209">
-								<span class="mtext-110 cl2">
-									$100
-								</span>
-							</div>	
+								<span class="mtext-110 cl2"> $100 </span>
+							</div>
 							<div class="size-209 p-r-18 p-r-0-sm w-full-ssm">
-								
-								
-								<div class="p-t-15">
-								
 
-							
 
-								
-									
-									
-										
-								</div>
+								<div class="p-t-15"></div>
 							</div>
 						</div>
 
 						<div class="flex-w flex-t p-t-27 p-b-33">
 							<div class="size-208">
-								<span class="stext-110 cl2">
-									原價:
-								</span>
+								<span class="stext-110 cl2"> 原價: </span>
 							</div>
 
 							<div class="size-209">
-								<span class="mtext-110 cl2">
-									$1680
-								</span>
+								<span class="mtext-110 cl2" th:text="${ShoppingCart.getSubtotal()}"> $1680 </span>
 							</div>
 							<div class="size-208 moneymargin">
-								<span class="mtext-101 cl2 ">
-									總價:
-								</span>
+								<span class="mtext-101 cl2 "> 總價: </span>
 							</div>
 
 							<div class="size-209 p-t-1 moneymargin">
-								<span class="mtext-110 cl2">
-									$1580
-								</span>
+								<span class="mtext-110 cl2" th:text="${ShoppingCart.getSubtotal()}"> $1580 </span>
 							</div>
 						</div>
 						<div class="row">
-						<button class="col-6 flex-c-m stext-101 cl2 size-116  bg8 bor14 hov-btn3 p-lr-15 trans-04 pointer flex-c-m">
-							繼續購物
-						</button>
-						<button class="col-6 flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
-							結帳
-						</button>
+							<button
+								class="col-6 flex-c-m stext-101 cl2 size-116  bg8 bor14 hov-btn3 p-lr-15 trans-04 pointer flex-c-m">
+								繼續購物</button>
+							<a href="/gotrip/creatOrder" class="col-6 flex-c-m stext-101 cl0 size-116 bg3 bor14 hov-btn3 p-lr-15 trans-04 pointer">
+							<button
+								>
+								結帳</button></a>
 						</div>
-						
+
 					</div>
 				</div>
 			</div>
 		</div>
 	</form>
-		
-	
-		
+
+
+
 
 	<!-- Footer -->
 	<footer th:replace="frontend/partials/fragment :: footer"></footer>
@@ -254,28 +193,128 @@
 	<div th:replace="frontend/partials/fragment :: modal1"></div>
 	<!-- javascript -->
 	<div th:replace="frontend/partials/fragment :: script"></div>
-	
+
+
+	<!--套版 script -->
 	<script>
- 	<!--套版 script -->
-		$(".js-select2").each(function(){
+		$(".js-select2").each(function() {
 			$(this).select2({
-				minimumResultsForSearch: 20,
-				dropdownParent: $(this).next('.dropDownSelect2')
+				minimumResultsForSearch : 20,
+				dropdownParent : $(this).next('.dropDownSelect2')
 			});
 		})
-		
-		$('.js-pscroll').each(function(){
-			$(this).css('position','relative');
-			$(this).css('overflow','hidden');
+
+		$('.js-pscroll').each(function() {
+			$(this).css('position', 'relative');
+			$(this).css('overflow', 'hidden');
 			var ps = new PerfectScrollbar(this, {
-				wheelSpeed: 1,
-				scrollingThreshold: 1000,
-				wheelPropagation: false,
+				wheelSpeed : 1,
+				scrollingThreshold : 1000,
+				wheelPropagation : false,
 			});
 
-			$(window).on('resize', function(){
+			$(window).on('resize', function() {
 				ps.update();
 			})
+		});
+		
+		
+		$('#addtocart').change(function() {
+			var value=$(this).val();
+			
+			
+			var id = 1;
+			var qty = 1;
+			var type;
+			switch (value){
+			case '1':
+				 type = 'hotel';
+			break;
+			case '2':
+				 type = 'ticket';
+			break;	
+			case '3':
+				 type = 'car';
+			break;	 
+			
+			default:
+				console.log('switch錯誤')
+			break;
+			}
+			 
+			 $.ajax({
+		            type: 'GET',
+		            url: '/gotrip/addToCart',
+		            data:{
+		            	productId:id,
+		            	type:type,
+		            	qty:qty
+		            	},
+		            dataType: 'json',
+		            success: function (data) {
+		                // 清空tbody內容
+		                $('tbody').html('');
+		                let putback = "";
+		                // ajax回傳資料放到tbody'
+		                console.log(data);
+		                
+		                const keys = Object.keys(data.content);
+						for (let i = 0; i < keys.length; i++) {
+  						const key = keys[i];
+ 						console.log(key,data.content[key].itemInfo);
+ 						
+	                     putback += "<tr class='table_row'>" +
+	                    	 		"<td class='column-1'>" +data.content[key].itemInfo  +"</td>" +
+	                    			"<td class=column-3>" + data.content[key].unitPrice +"</td>" +
+	                    			"<td class='column-4'>" + 
+									"<div class='wrap-num-product flex-w m-l-auto m-r-0'>" +
+									"<div class='btn-num-product-down cl8 hov-btn3 trans-04 flex-c-m'>" +
+									"<i class='fs-16 zmdi zmdi-minus'></i>" +
+									"</div> " +
+									"<input class='mtext-104 cl3 txt-center num-product' type='number' name='num-product1'" + "value=" + data.content[key].quantity + ">" +
+									"<div class='btn-num-product-up cl8 hov-btn3 trans-04 flex-c-m'>" +
+									"<i class='fs-16 zmdi zmdi-plus'></i>" +
+									"</div>" +
+									"</div>" +
+									"</td>" +
+									"<td class='column-5'>" + data.content[key].unitPrice * data.content[key].quantity + "</td>" + 
+									"<td class='column-6'><button type='button' class='btn btn-danger btn-delete'>刪除</button></td>" + 	
+									"</tr>";
+	          								   				
+						};
+		                
+// 		            Object.keys(data.content).forEach(function(key){
+// // 		                console.log(k + ' - ' + data.content);
+// 						var i = 0
+// 		                console.log(data.content[key].itemInfo);
+// 		                console.log(data.content[key].unitPrice);
+		                
+// 	                     putback =  "<td class='column-1'>" + data.content[key].itemInfo  +"</td>" +
+// 	                    			"<td class=column-3>" + data.content[key].unitPrice +"</td>";
+// 	                    	i++
+// 	                    			console.log(i);
+// 		            });    
+		                console.log(putback);
+// 		            分隔線----
+// 		                $.each(data,function(key,val){
+// 		                	console.log(val);
+// 		                	$.each(val,function(i){
+// 		                	console.log(val[i].itemInfo);
+		                		
+// 	                     putback =  "<td class='column-1'>" + val[i].itemInfo  +"</td>" +
+// 	                    			"<td class=column-3>" + val[i].unitPrice +"/td>";
+// 		                	});
+							
+// 	                    });
+		                $('tbody').append(putback)
+		                console.log(data.subtotal);
+		            },
+		            error: function () {
+		                console.log('error')
+		            }
+		                
+		                
+		});
 		});
 	</script>
 
