前台租車商家列表與表單

--- a/src/main/resources/templates/frontend/car/vendor-loc-form.html
+++ b/src/main/resources/templates/frontend/car/vendor-loc-form.html
@@ -22,27 +22,25 @@
 							<h2 class="ltext-103 cl5 font-weight-bold m-b-30">租車管理</h2>
 							<ul>
 								<li class="bor18">
-									<a href="#" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+									<a th:href="@{#}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
 										檢視訂單
 									</a>
 								</li>
 								<li class="bor18">
-									<a href="#" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+									<a th:href="@{/cars/locations?companyId=1}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
 										地點與車款列表
 									</a>
 								</li>
-
 								<li class="bor18">
-									<a href="#" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
-										新增地點
+									<a th:href="@{/cars/locations/form}" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
+										新增地點與車款
 									</a>
 								</li>
-
-								<li class="bor18">
-									<a href="#" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4">
-										新增車款
-									</a>
-								</li>
+<!-- 								<li class="bor18"> -->
+<!-- 									<a href="#" class="dis-block mtext-110 cl5 hov-cl1 trans-04 p-tb-12 p-lr-4"> -->
+<!-- 										新增車款 -->
+<!-- 									</a> -->
+<!-- 								</li> -->
 							</ul>
 						</div>
 					</div>
